fix(decorImage): solve image fixed on iPhones

--- a/src/styles/components/_decor-image.scss
+++ b/src/styles/components/_decor-image.scss
@@ -2,6 +2,10 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  background-attachment: scroll;
   width: 100%;
   filter: brightness(0.8) saturate(1.5);
+  @include laptop {
+    background-attachment: fixed;
+  }
 }
